--- a/source/NCollaborateUnitTests/NCollaborateUnitTests.csproj
+++ b/source/NCollaborateUnitTests/NCollaborateUnitTests.csproj
@@ -4,11 +4,11 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{B0BB31EE-FE77-44B1-82B9-CAAEEF046CCC}</ProjectGuid>
+    <ProjectGuid>{7BD661A3-5DA2-4986-BE39-3C8622C4EADD}</ProjectGuid>
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Samples</RootNamespace>
-    <AssemblyName>Samples</AssemblyName>
+    <RootNamespace>NCollaborateUnitTests</RootNamespace>
+    <AssemblyName>NCollaborateUnitTests</AssemblyName>
     <TargetFrameworkVersion>v4.6.1</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
   </PropertyGroup>
@@ -49,28 +49,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="TypePlayer\CollaborateLogic\TypeCollecorExtensions.cs" />
-    <Compile Include="TypePlayer\CollaborateLogic\TypeCollector.cs" />
-    <Compile Include="TypePlayer\IType.cs" />
-    <Compile Include="TypePlayer\ITypeHolder.cs" />
-    <Compile Include="TypePlayer\Player.cs" />
-    <Compile Include="TypePlayer\PlayerState.cs" />
-    <Compile Include="TypePlayer\PlayerTests.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <Content Include="Readme.txt" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <Service Include="{82A7F48D-3B50-4B1E-B82E-3ADA8210C358}" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\NCollaborate\NCollaborate.csproj">
-      <Project>{a936d9a3-bfc7-4cb9-a2d4-dc65a3d70b71}</Project>
-      <Name>NCollaborate</Name>
-    </ProjectReference>
+    <Folder Include="Session\" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
