Added ITestSession and NUnitTestSession that tracks information about currently executing tests (for now we need only test name). Added ISutSession and SutSession class that contains info about currently executing sut action. Above two classes incorporated into newly created PlayerSutController and TypeCollector classes that are used in unit tests. This will allow us to watch collaboration between Player class and IType interface thru Console output.

--- a/source/NCollaborate/NCollaborate.csproj
+++ b/source/NCollaborate/NCollaborate.csproj
@@ -41,10 +41,11 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Session\ISutSession.cs" />
+    <Compile Include="Session\ITestSession.cs" />
+    <Compile Include="Session\SutSession.cs" />
   </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Session\" />
-  </ItemGroup>
+  <ItemGroup />
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
        Other similar extension points exist, see Microsoft.Common.targets.
